--- a/flex-box.html
+++ b/flex-box.html
@@ -12,6 +12,24 @@
 
     <body>
         <h1>hello world</h1>
+
+        <figure class="pizza">
+
+            <div class="pizza__hero">
+
+                <img src="https://images.unsplash.com/photo-1544982503-9f984c14501a?ixlib=rb-1.2.1&auto=format&fit=crop&w=1534&q=80"
+                    alt="pizza" class="pizza__img">
+
+            </div>
+
+            <div class="pizza__content">
+                content
+            </div>
+
+            <div class="pizza__prize">
+                $11.99
+            </div>
+        </figure>
     </body>
 
 </html>
