--- a/flex-box.html
+++ b/flex-box.html
@@ -16,7 +16,7 @@
 
             <div class="pizza__hero">
 
-                <img src="https://images.unsplash.com/photo-1544982503-9f984c14501a?ixlib=rb-1.2.1&auto=format&fit=crop&w=1534&q=80"
+                <img src="https://images.unsplash.com/photo-1534308983496-4fabb1a015ee?ixlib=rb-1.2.1&auto=format&fit=crop&w=1510&q=80"
                     alt="pizza" class="pizza__img">
 
             </div>
@@ -25,10 +25,11 @@
                 content
             </div>
 
-            <div class="pizza__prize">
+            <div class="pizza__price">
                 $11.99
             </div>
         </figure>
+
     </body>
 
 </html>
