pizza css-continued

--- a/flex-box.html
+++ b/flex-box.html
@@ -22,12 +22,14 @@
             </div>
 
             <div class="pizza__content">
-                content
+                <div class="pizza__title">
+                    <h1 class="pizza__heading"> Pizza Vegetable 👍🏽 </h1>
+                    <div class="pizza__tag pizza__tag--1">#Vegetarian </div>
+                    <div class="pizza__tag pizza__tag--2">#Italian</div>
+                </div>
             </div>
 
-            <div class="pizza__price">
-                $11.99
-            </div>
+            <div class="pizza__price"> $11.99</div>
         </figure>
 
     </body>
