--- a/flex-box.html
+++ b/flex-box.html
@@ -27,6 +27,18 @@
                     <div class="pizza__tag pizza__tag--1">#Vegetarian </div>
                     <div class="pizza__tag pizza__tag--2">#Italian</div>
                 </div>
+                <p class="pizza__description">
+                    yummy veggie pizza with tasty olives, crisp peppers,fresh argula and original italian italian
+                    tomato
+                    sauce
+                </p>
+                <div class="pizza__details">
+                    <p class="pizza__detail"><span class="emoji">🍕</span> 850 kcal</p>
+                    <p class="pizza__detail"><span class="emoji">⏰</span> 30 min</p>
+                    <p class="pizza__detail"><span class="emoji">⭐️</span> 4,7/5</p>
+
+                </div>
+
             </div>
 
             <div class="pizza__price"> $11.99</div>
